--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     />
     <style>
       body {
-        font-family: "Roboto", sans-serif;
+        font-family: 'Roboto', sans-serif;
       }
       .submenu {
         display: none;
@@ -25,7 +25,7 @@
     </style>
     <script>
       function toggleMenu(element) {
-        element.parentElement.classList.toggle("active");
+        element.parentElement.classList.toggle('active');
       }
     </script>
   </head>
@@ -45,10 +45,7 @@
     <div class="flex flex-col md:flex-row">
       <!-- Sidebar Kiri -->
       <nav class="bg-white w-full md:w-1/4 p-4 sidebar shadow-lg">
-        <a
-          class="block py-2 flex items-center text-gray-700 hover:bg-gray-200 rounded-md"
-          href="beranda.html"
-        >
+        <a class="block py-2 flex items-center text-gray-700 hover:bg-gray-200 rounded-md" href="beranda.html">
           <i class="fas fa-newspaper mr-2"></i>
           <span>Beranda</span>
         </a>
@@ -63,21 +60,11 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Sejarah LP2M</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Visi & Misi LP2M</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Tugas Pokok Dan Fungsi</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Dokumen Resmi</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Struktur Organisasi</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Sejarah LP2M</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Visi & Misi LP2M</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Tugas Pokok Dan Fungsi</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Dokumen Resmi</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Struktur Organisasi</a>
           </div>
         </div>
         <div class="menu-item">
@@ -91,21 +78,11 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Penelitian</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pengabdian</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Kerjasama Antar Instasi</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Rekapitulasi Penelitian</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Rekapitulasi Pengabdian</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Penelitian</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pengabdian</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Kerjasama Antar Instasi</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Rekapitulasi Penelitian</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Rekapitulasi Pengabdian</a>
           </div>
         </div>
         <div class="menu-item">
@@ -119,24 +96,12 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Penelitian</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Pengabdian Kepada Masyarakat</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Publikasi Ilmiah</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Pelayanan Kesehatan Masyarakat</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Pengelolaan Pengembangan</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Pusat Studi</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Penelitian</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Pengabdian Kepada Masyarakat</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Publikasi Ilmiah</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Pelayanan Kesehatan Masyarakat</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Pengelolaan Pengembangan</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Pusat Studi</a>
           </div>
         </div>
         <div class="menu-item">
@@ -150,15 +115,9 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Profil Jurnal</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Rekap Jurnal</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >E-Jurnal</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Profil Jurnal</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Rekap Jurnal</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">E-Jurnal</a>
           </div>
         </div>
         <div class="menu-item">
@@ -172,27 +131,13 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Standar Operating</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Motto Dan Maklumat Pelayanan</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Panduan Dan Pedoman</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Layanan Pembuatan Surat Online</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Hasil Notulensi Rapat/Meeting LP2M</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Dokumen Kerja</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Kumpulan SK</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Standar Operating</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Motto Dan Maklumat Pelayanan</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Panduan Dan Pedoman</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Layanan Pembuatan Surat Online</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Hasil Notulensi Rapat/Meeting LP2M</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Dokumen Kerja</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Kumpulan SK</a>
           </div>
         </div>
         <div class="menu-item">
@@ -206,19 +151,10 @@
             <span class="arrow ml-auto">▼</span>
           </a>
           <div class="submenu pl-4">
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Indeks Kepuasan Pelanggan</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Survei Produk Penelitian Dan Pengabdian Yang Di Manfaatkan Oleh
-              Masyarakat</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Survei Penelitian PKM</a
-            >
-            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#"
-              >Evaluasi</a
-            >
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Indeks Kepuasan Pelanggan</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Survei Produk Penelitian Dan Pengabdian Yang Di Manfaatkan Oleh Masyarakat</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Survei Penelitian PKM</a>
+            <a class="block py-2 text-gray-600 hover:text-gray-800" href="#">Evaluasi</a>
           </div>
         </div>
       </nav>
@@ -226,9 +162,7 @@
       <main class="flex-1 p-4">
         <!-- Carousel Gambar -->
         <div class="carousel mb-8 bg-white p-6 rounded-lg shadow-lg">
-          <h2 class="text-3xl font-bold mb-4 text-center text-blue-600">
-            PENGUMUMAN
-          </h2>
+          <h2 class="text-3xl font-bold mb-4 text-center text-blue-600">PENGUMUMAN</h2>
           <img
             alt="Pengelola STIKES Baktara"
             class="w-full h-auto mb-4 rounded-lg"
@@ -256,9 +190,7 @@
         </div>
         <!-- Additional content -->
         <div class="additional-content">
-          <h2 class="text-3xl font-bold mb-4 text-center text-blue-600">
-            Berita Terbaru
-          </h2>
+          <h2 class="text-3xl font-bold mb-4 text-center text-blue-600">Berita Terbaru</h2>
           <div class="news-item mb-4 bg-white p-6 rounded-lg shadow-lg">
             <img
               alt="Gambar berita terbaru 1"
@@ -267,9 +199,7 @@
               src="https://storage.googleapis.com/a1aa/image/xWCXvpmH6dqgGtwy7AOkO7GNU9eN5GOzvZSeRraNaZkhof2nA.jpg"
               width="800"
             />
-            <h3 class="text-2xl font-semibold text-blue-600">
-              Judul Berita Terbaru 1
-            </h3>
+            <h3 class="text-2xl font-semibold text-blue-600">Judul Berita Terbaru 1</h3>
             <p class="text-gray-700">Deskripsi singkat berita terbaru 1.</p>
           </div>
           <div class="news-item mb-4 bg-white p-6 rounded-lg shadow-lg">
@@ -280,9 +210,7 @@
               src="https://storage.googleapis.com/a1aa/image/Itjausfn9V1sJyAr2tTsbrfIxt8uY0pBeschFCDcCCBERftPB.jpg"
               width="800"
             />
-            <h3 class="text-2xl font-semibold text-blue-600">
-              Judul Berita Terbaru 2
-            </h3>
+            <h3 class="text-2xl font-semibold text-blue-600">Judul Berita Terbaru 2</h3>
             <p class="text-gray-700">Deskripsi singkat berita terbaru 2.</p>
           </div>
           <div class="news-item mb-4 bg-white p-6 rounded-lg shadow-lg">
@@ -293,18 +221,14 @@
               src="https://storage.googleapis.com/a1aa/image/SdKaG0WeUNzhPy0Gue0rGc0sTPM7T66EaRL6a0lyNiOkof2nA.jpg"
               width="800"
             />
-            <h3 class="text-2xl font-semibold text-blue-600">
-              Judul Berita Terbaru 3
-            </h3>
+            <h3 class="text-2xl font-semibold text-blue-600">Judul Berita Terbaru 3</h3>
             <p class="text-gray-700">Deskripsi singkat berita terbaru 3.</p>
           </div>
         </div>
       </main>
       <!-- Sidebar Kanan (Pengumuman) -->
       <aside class="bg-white w-full md:w-1/4 p-4 shadow-lg">
-        <h3 class="text-2xl font-bold mb-4 text-center text-blue-600">
-          PENGUMUMAN
-        </h3>
+        <h3 class="text-2xl font-bold mb-4 text-center text-blue-600">PENGUMUMAN</h3>
         <ul class="list-disc pl-5 text-gray-700">
           <li>
             <a class="text-blue-600 hover:underline" href="Formulir.html"
